--- a/config.toml
+++ b/config.toml
@@ -173,39 +173,44 @@ defaultContentLanguageInSubdir = false
   weight = 2
 
 [[menu.main]]
+  name = "Softwares"
+  url = "/software/"
+  weight = 3
+
+[[menu.main]]
   name = "Talks"
   url = "/talk/"
-  weight = 3
+  weight = 4
 
 [[menu.main]]
   name = "Grants"
   url = "/grant/"
-  weight = 4
+  weight = 5
 
 [[menu.main]]
   name = "Awards"
   url = "/awards/"
-  weight = 5
+  weight = 6
 
 [[menu.main]]
   name = "Teaching"
   url = "/teaching/"
-  weight = 6
+  weight = 7
 
 [[menu.main]]
   name = "Students"
   url = "/student/"
-  weight = 7
+  weight = 8
 
 [[menu.main]]
   name = "CV"
   url = "/Peng_Liu_CV_05_2019.pdf"
-  weight = 8
+  weight = 9
 
 [[menu.main]]
   name = "Contact"
   url = "/contact/"
-  weight = 9
+  weight = 10
 
 # Taxonomies.
 #[taxonomies]
