--- a/config.toml
+++ b/config.toml
@@ -203,14 +203,14 @@ defaultContentLanguageInSubdir = false
   weight = 8
 
 [[menu.main]]
-  name = "CV"
-  url = "/Peng_Liu_CV_9_2021.pdf"
-  weight = 9
-
-[[menu.main]]
   name = "Contact"
   url = "/contact/"
-  weight = 10
+  weight = 9
+
+#[[menu.main]]
+#  name = "CV"
+#  url = "/Peng_Liu_CV_9_2021.pdf"
+#  weight = 10
 
 # Taxonomies.
 #[taxonomies]
