--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@
 .Rhistory
 .RData
 .Ruserdata
-public
+/public/
+/resources/
 .DS_Store
 Peng_Liu_CV_05_2019_Short.docx
 index.html
 https:
 .hugo_build.lock
 .Rprofile
-.netlify
+Thumbs.db
