--- a/config.toml
+++ b/config.toml
@@ -164,7 +164,7 @@ defaultContentLanguageInSubdir = false
 
 [[menu.main]]
   name = "Home"
-  url = "/home/"
+  url = "/about/"
 #  url = "#about"
   weight = 1
 
